<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/calculadora"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/txtNum1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_o_primeiro_valor"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/txtNum2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_o_segundo_valor"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnSomar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/somar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado" />

    <TextView
        android:id="@+id/lblResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado_resp" />

</LinearLayout>